app/styles/css/main.css
.card {
  height: 575px;
}
.loadclass > span {
  color: rgba(0, 0, 0, 0.4);
}
.table-container {
  min-height: 275px;
  overflow-y: scroll;
}
::-webkit-scrollbar {
  -webkit-appearance: none;
  width: 4px;
}
::-webkit-scrollbar-thumb {
  border-radius: 10px;
  background-color: rgba(0,0,0,.2);
  -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
}
.tscroll {
  max-height: 290px;
  overflow-y: scroll;
}

